# glb-forge

./: .gitignore  README.md  pyproject.toml
examples/01_cube/: generate.py
examples/02_pyramid/: generate.py
examples/03_custom_mesh/: generate.py
examples/04_trang_an_house/: generate.py
generators/35_ninh_binh/: nha_co_trang_an.py
output/35-Ninh-Binh/: Nha-co-Trang-An.glb
scripts/: generate_all.py  generate_site.py
src/glb_forge/: __init__.py  build.py  catalog.py  glb_writer.py  mesh.py  scene.py  scene_writer.py
src/glb_forge/scenes/: __init__.py  trang_an_house.py
src/glb_forge/shapes/: __init__.py  cube.py  pyramid.py
src/glb_forge/sites/: __init__.py  models.py  registry.py
src/glb_forge/sites/provinces/: __init__.py  ninh_binh.py
