[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ninh-binh-trang-an-house-glb"
version = "0.1.0"
description = "Pure Python procedural GLB generator for Vietnamese heritage sites"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
